# PlaidCTF

crypto/Sheriff_says/: note.txt
crypto/hangman/: note.txt
pwn/Ocalc/src/: dune  function_description.ml  mpz.ml  mpz.mli  notes.txt  ocalc.ml  type_description.ml
